# jenkins-qemu-provisioner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  jenkins-ephemeral-qemu-design.md  pyproject.toml
.beads/: metadata.json
control_plane/: Dockerfile  README.md  __init__.py  api.py  auth.py  config.py  db.py  guest_images.py  image_catalog.json.example  label_policies.json  label_policies.json.example  logging_config.py  loops.py  main.py  metrics.py  models.py  repositories.py  schemas.py  state_machine.py
deploy/: apply-cloud-init-nocloud-fix.sh  boot-base-image.sh  constraints-dragonfly.txt  install-node-agent.sh  provision-dfly-jail.sh
docs/: control-plane-operations.md  fake-node-agent-e2e.md  jenkins-ephemeral-qemu-design.md  mvp-acceptance-checklist.md  node-agent-contract.md  node-agent-runbook.md  ui-dashboard.md
fake_node_agent/: __init__.py  app.py  config.py
jenkins/: Dockerfile  plugins.txt
node_agent/: __init__.py  api.py  base_images.py  config.py  heartbeat.py  main.py  qemu_runtime.py  safety.py  schemas.py  state.py
scripts/: manage-dfly-jail.sh
tests/: test_api.py  test_auth.py  test_base_images.py  test_fake_node_agent.py  test_guest_images.py  test_host_stats_backends.py  test_host_stats_service.py  test_jenkins_client.py  test_metrics.py  test_migrations.py  test_node_agent_api.py  test_node_agent_heartbeat.py  test_node_agent_main.py  test_node_agent_qemu.py  test_node_agent_safety.py  test_provisioning.py  test_reconciler.py  test_retry.py  test_scaler.py  test_state_machine.py  (+1 more)
(+33 files in other folders)
